--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: cdm_clients
-description: A new Flutter project.
+description: Application d''annuaire des clients de l'ecole CDM
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -29,11 +29,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  photo_view: ^0.13.0
+  http: ^0.13.3
+  google_fonts: ^2.1.0
+  shared_preferences: ^2.0.6
+  url_launcher: ^6.0.6
+  jiffy: ^4.1.0
+  intl: ^0.17.0
+  awesome_dialog: ^2.1.2
+  image_picker: ^0.8.4+3
+  lottie: ^1.2.1
+  font_awesome_flutter: ^9.2.0
+  azlistview: ^2.0.0-nullsafety.0
+  awesome_notifications: any
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -58,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
