--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,21 +29,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
   photo_view: ^0.13.0
-  http: ^0.13.3
-  google_fonts: ^2.1.0
-  shared_preferences: ^2.0.6
-  url_launcher: ^6.0.6
-  jiffy: ^4.1.0
+  http: ^0.13.4
+  google_fonts: ^2.3.3
+  shared_preferences: ^2.0.15
+  url_launcher: ^6.1.2
+  jiffy: ^5.0.0
   intl: ^0.17.0
-  awesome_dialog: ^2.1.2
-  image_picker: ^0.8.4+3
-  lottie: ^1.2.1
-  font_awesome_flutter: ^9.2.0
-  azlistview: ^2.0.0-nullsafety.0
-  awesome_notifications: any
-  cached_network_image: ^3.2.0
+  awesome_dialog: ^2.2.1
+  image_picker: ^0.8.5+3
+  lottie: ^1.3.0
+  font_awesome_flutter: ^10.1.0
+  azlistview: ^2.0.0
+  awesome_notifications: ^0.6.21
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
