--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   azlistview: ^2.0.0
   awesome_notifications: ^0.6.21
   cached_network_image: ^3.2.1
+  flutter_windowmanager: ^0.2.0 
 
 dev_dependencies:
   flutter_test:
