--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = cdm_clients
+PRODUCT_NAME = CDM Clients;
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.cdmClients
+PRODUCT_BUNDLE_IDENTIFIER = com.bouledrouaamor.cdm_client;
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
