--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,11 +44,18 @@ dependencies:
   azlistview: ^2.0.0
   awesome_notifications: ^0.6.21
   cached_network_image: ^3.2.1
-  flutter_windowmanager: ^0.2.0 
+  flutter_windowmanager: ^0.2.0
+  rename: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.9.2"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/CDM.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
